# dengine

./: .gitignore  CMakeLists.txt  README.md
dengine/: CMakeLists.txt
dengine/include/: App.h  Common.h  Core.h  Math.h  Motion.h  Renderer.h  Sprite.h  Surface.h  Vector2d.h  Window.h  dengine.h
dengine/src/: App.cpp  Math.cpp  Motion.cpp  Renderer.cpp  Sprite.cpp  Surface.cpp  Vector2d.cpp  Window.cpp
examples/asteroids/: CMakeLists.txt  main.cpp
examples/asteroids/assets/: asteroid-large-1.aseprite  asteroid-large-2.aseprite  bullet.aseprite  ship.aseprite
libzip/: CMakeLists.txt
